chapter 11, even more notes

--- a/week-10/chapter-11-multiple-regression-and-correlation.ipynb
+++ b/week-10/chapter-11-multiple-regression-and-correlation.ipynb
@@ -292,10 +292,88 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Interactions between Predictors in their Effects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The multiple regression equation:\n",
+    "\n",
+    "$$E(y) = \\alpha + \\beta_{1}x_{1} + \\beta_{2}x_{2} + ... + \\beta_{k}x_{k}$$\n",
+    "\n",
+    "assumes that the partial relationship between $y$ and each $x_{i}$ is linear and that the slope $\\beta_{i}$ of that relationship is identical for all values of the other explanatory variables.\n",
+    "\n",
+    "the above model is sometimes too simple to be adequate. Often there is an **interaction** with the relationship between two variables changing according to the value of a third variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross-Product Terms\n",
+    "\n",
+    "A common approach for allowing interaction introduces cross-product terms of the explanatory variables into the multiple regression model. With two explanatory variables, the model is:\n",
+    "\n",
+    "$$E(y) = \\alpha + \\beta_{1}x_{1} + \\beta_{2}x_{2} + \\beta_{3}x_{1}x_{2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing an Interaction Term\n",
+    "For a model with two explanatory variables and an interaction term, the regression equation is:\n",
+    "\n",
+    "$$E(y) = \\alpha + \\beta_{1}x_{1} + \\beta_{2}x_{2} + \\beta_{3}x_{1}x_{2}$$\n",
+    "\n",
+    "In the simpler model which assumes no interaction, $\\beta_{3} = 0$. Thus the hypothesis for no interaction is:\n",
+    "\n",
+    "$$H_{0}: \\beta_{3} = 0$$\n",
+    "\n",
+    "The t-statistic is:\n",
+    "\n",
+    "$$t = \\frac{b_{3}}{se}$$\n",
+    "\n",
+    "If the P-value for $H_{a}$ is very high (e.g., 0.51), then there is little evidence of interaction of $x_{1}$ and $x_{2}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Centering the Explanatory Variables\n",
+    "When the interaction term as included in the model along with the main effects individually, the coefficients of $x_{1}$ and $x_{2}$ are not usually meaningful because they refer to the effect of a predictor only when the other predictor equals zero. \n",
+    "\n",
+    "An alternative weay to parameterize the interaction model so that the main effects can be interpreted when $x_{1}$ and $x_{2}$ are at their mean level is to center the explanatory variables by subtracting the mean.\n",
+    "\n",
+    "Let $x^{C}_{1} = x_{1} - \\mu_{x_{1}}$ and $x^{C}_{2} = x_{2} - \\mu_{x_{2}}$, so that each new explanatory variable has a mean of zero. Then we can express the interaction model as:\n",
+    "\n",
+    "$$E(y) = \\alpha + \\beta_{1}x^{C}_{1} + \\beta_{2}x^{C}_{2} + \\beta_{3}x^{C}_{1}x^{C}_{2} $$\n",
+    "\n",
+    "$$= \\alpha + \\beta_{1}(x_{1} - \\mu_{x_{1}}) + \\beta_{2}(x_{2} - \\mu_{x_{2}}) + \\beta_{3}(x_{1} - \\mu_{x_{1}})(x_{2} - \\mu_{x_{2}})$$\n",
+    "\n",
+    "Now $\\beta_{1}$ refers to the effect of $x_{1}$ at the mean of $x_{2}$ and $\\beta_{2}$ refers to the effect of $x_{2}$ at the mean of $x_{1}$.\n",
+    "\n",
+    "When we rerun the interaction model ... after centering the predictors about their sample means, the estimate for the interaction term is the same as for the uncentered model.\n",
+    "\n",
+    "However, the estiamtes for the effects of $x_{1}$ and $x_{2}$ are similar to the values for the no interaction model. This happens because the coefficient for a variable represents its effect at the mean of the other variable, which is typically similar to the effect for the no interaction model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comparing Regression Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
