Homework 4: finished problem 11.2

--- a/week-10/chapter-11-multiple-regression-and-correlation.ipynb
+++ b/week-10/chapter-11-multiple-regression-and-correlation.ipynb
@@ -45,7 +45,11 @@
     "- in bivariate regression, a slope describes the effect of an explanatory variable while *ignoring* all other possible explanatory variables\n",
     "- the beta coefficient describes the change in the mean of $y$ for a one unit increase in that predictor\n",
     "- the multivariate regression equation (that we considered in the prededing example) assumes that the slope of the partial relationship between $y$ and each predictor is identical for all combinations of values of the other explanatory variables. This means that the model is appropriate when there is not statistical interaction between the explanatory variables\n",
-    "- a partial slope in a multiple regression equation usually differs from the slope in the bivariate model for that predictor, but it would not if it uncorrelated with the other explanatory variables in the model"
+    "- a partial slope in a multiple regression equation usually differs from the slope in the bivariate model for that predictor, but it would not if it uncorrelated with the other explanatory variables in the model\n",
+    "\n",
+    "> reading the equation\n",
+    ">\n",
+    "> "
    ]
   },
   {
