Homework 4: completed problem 11.17

--- a/exercises/homework-04/homework4-calculations.ipynb
+++ b/exercises/homework-04/homework4-calculations.ipynb
@@ -11,6 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[Calculating P value from t statistic (Khan Accademy)](https://www.youtube.com/watch?v=z-HSsVARNnk)\n",
+    "\n",
+    "[Khan Academpy: Statistics and Probability](https://www.khanacademy.org/math/statistics-probability)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 11.2\n",
     "For recent data in Jacksonville, Florida\n",
     "- $y$ = selling price of home (in dollars)\n",
@@ -337,11 +346,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|            | Sum of<br>Squares | DF     | Mean<br>Square | F     | Sig   |\n",
+    "| ---------- | ----------------: | -----: | -------------: | ----: | ----: |\n",
+    "| Regression |  813.3            | 5      | ? | ? | ? |\n",
+    "| Residual   | 2940.0            | 60     | ? |   |   |\n",
+    "| Total      | 3753.3            | 65     |   |   |   |"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def t(b, se):\n",
+    "    return b/se"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = [\n",
+    "    (0.1000, 0.0450),\n",
+    "    ( -0.1500, 0.0750),\n",
+    "    (0.1000, 0.2000),\n",
+    "    (-0.0400, 0.0500),\n",
+    "    (0.1200, 0.0500)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0.1000   0.0450   2.2222\n",
+      " -0.1500   0.0750  -2.0000\n",
+      "  0.1000   0.2000   0.5000\n",
+      " -0.0400   0.0500  -0.8000\n",
+      "  0.1200   0.0500   2.4000\n"
+     ]
+    }
+   ],
+   "source": [
+    "for b,se in values:\n",
+    "    print(\"{0:8.4f} {1:8.4f} {2:8.4f}\".format(b,se,b/se))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Mean Square – These are the Mean Squares, the Sum of Squares divided by their respective DF. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> F and Sig. – This is the F-statistic the p-value associated with it.  \n",
+    "\n",
+    "The F-statistic is the Mean Square (Regression) divided by the Mean Square (Residual)\n",
+    "\n",
+    "The p-value is compared to some alpha level in testing the null hypothesis that all of the model coefficients are 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$R^{2} = \\frac{TSS-SSE}{TSS}$\n",
+    "\n",
+    "in SPSS output, TSS = `Total`, SSE = `Residual`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def r2(tss, sse):\n",
+    "    return (tss-sse)/tss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21668931340420433"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2(3753.3, 2940.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2167"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(r2(3753.3, 2940.0), 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Std. Error of the Estimate – This is also referred to as the root mean squared error (Root MSE).\n",
+    "\n",
+    "It is the standard deviation of the error term and **the square root of the Mean Square for the Residuals in the ANOVA table**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.0"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(49)"
+   ]
   }
  ],
  "metadata": {
