--- a/week-10/chapter-11-multiple-regression-and-correlation.ipynb
+++ b/week-10/chapter-11-multiple-regression-and-correlation.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "In practice, the above assumptions are never satisfied perfectly.\n",
     "\n",
-    "Two-sided inferences are robbust to the normality and common $\\sigma$ assumptions.\n",
+    "Two-sided inferences are robust to the normality and common $\\sigma$ assumptions.\n",
     "\n",
     "More important are the assumptions of randomization and that the regression functions describes well how the mean of $y$ depends on the explanatory variables."
    ]
@@ -276,7 +276,12 @@
     "\n",
     "$$b_{i} \\pm t(se)$$\n",
     "\n",
-    "The t-score comes from the t-table, with $df = n - (k + 1)$. For example, a 95% confidence interval for the partial effect of $x_{1}$ is $b_{1} \\pm t_{.025}(se)$."
+    "The t-score comes from the t-table, with $df = n - (k + 1)$. For example, a 95% confidence interval for the partial effect of $x_{1}$ is $b_{1} \\pm t_{.025}(se)$.\n",
+    "\n",
+    "> Explanation:\n",
+    ">\n",
+    "> Test of $H_{0}: \\beta_{1} = 0$   \n",
+    "> P = 0.03, so there is considerable evidence that $x_{1}$ has an effect on $y$, controlling for the other $x$'s."
    ]
   },
   {
@@ -290,7 +295,7 @@
     "\n",
     "The **regression mean square** equals the regression sum of squares divided by its degrees of freedom ($k$). The **residual mean square** equals the sum of squared errors divided by its degrees of freedom ($n - (k + 1)$). \n",
     "\n",
-    "The F-statistic and the t-statistic are related. The square of the t-statistic for teting that a partial regression coefficient equals zero is an F test statistic having the F distribution with $df_{1} = 1$ and $df_{2} = n - (k + 1)$.\n",
+    "The F-statistic and the t-statistic are related. The square of the t-statistic for testing that a partial regression coefficient equals zero is an F test statistic having the F distribution with $df_{1} = 1$ and $df_{2} = n - (k + 1)$.\n",
     "\n",
     "In general, if a statistic has a t distribution with $d$ degrees of freedom, then the square of that statistic has the F distribution with $df_{1} = 1$ and $df_{2} = d$."
    ]
