--- a/exercises/homework-04/homework4-calculations.ipynb
+++ b/exercises/homework-04/homework4-calculations.ipynb
@@ -524,6 +524,75 @@
    "source": [
     "np.sqrt(49)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Analysis in R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## How to count the number of NA values in each column of a DataFrame?\n",
+    "\n",
+    "if you are looking for NA counts for each column in a dataframe `x` then:\n",
+    "\n",
+    "```\n",
+    "na_count <-sapply(x, function(y) sum(length(which(is.na(y)))))\n",
+    "```\n",
+    "\n",
+    "should give you a list with the counts for each column.\n",
+    "\n",
+    "```\n",
+    "na_count <- data.frame(na_count)\n",
+    "```\n",
+    "Should output the data nicely in a dataframe like:\n",
+    "\n",
+    "```\n",
+    "----------------------\n",
+    "| row.names | na_count\n",
+    "------------------------\n",
+    "| column_1  | count\n",
+    "```\n",
+    "\n",
+    "[Reference (Stack Overflow)](https://stackoverflow.com/a/31145812)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recoding Values\n",
+    "\n",
+    "how to apply criteria so that only data in specific rows is replaced. Note that if you want to replace NA with some value you cannot use ==NA. You must use is.na().\n",
+    "\n",
+    "```\n",
+    "# Or replace only missing data\n",
+    "# Note that ==NA does not work!\n",
+    "SchoolData$Grade[is.na(SchoolData$Grade)] <- \"Missing Grade\"\n",
+    "```\n",
+    "\n",
+    "[Reference](http://rprogramming.net/recode-data-in-r/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "remove rows with missing values\n",
+    "\n",
+    "[Reference (Stack Overflow)](https://stackoverflow.com/questions/4862178/remove-rows-with-nas-missing-values-in-data-frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
