Homework 4: final edits, complete

--- a/exercises/homework-04/homework4-calculations.ipynb
+++ b/exercises/homework-04/homework4-calculations.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "71664.0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
        "71664.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,44 +305,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "71717.79999999999"
+       "71717.8"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# increase home size by one\n",
-    "yhat(x1+1,x2)"
+    "round(yhat(x1+1,x2),2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "71771.76"
+       "71717.79"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# now increase lot size by 18.9\n",
-    "yhat(x1+1,x2+19)"
+    "round(yhat(x1,x2+18.94),2)"
    ]
   },
   {
