Final Exam: question 10, parts a, b, d

--- a/final-exam/final-exam-notes-and-computations.ipynb
+++ b/final-exam/final-exam-notes-and-computations.ipynb
@@ -77,11 +77,105 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## 10. Multivariate Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = -19.672\n",
+    "b1 = -0.000629\n",
+    "b2 = 1.7399\n",
+    "b3 = 0.40994\n",
+    "b4 = 2.0357\n",
+    "b5 = -0.0344\n",
+    "\n",
+    "def haty(x1, x2, x3, x4, x5):\n",
+    "    return a + (b1*x1) + (b2*x2) + (b3*x3) + (b4*x4) + (b5*x5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outlets = 1739\n",
+    "cars = 9.27\n",
+    "income  = 85.4\n",
+    "age  = 3.5\n",
+    "bosses  = 9.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37.187268"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "haty(outlets, cars, income, age, bosses)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$F = \\frac{R^{2}/k}{(1 - R^{2})/[n - (k + 1)]}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fscore(r2, k, n):\n",
+    "    return (r2/k)/((1-r2)*(n-(k+1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.283333333333326"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fscore(0.994, 5, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -102,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
