--- a/final-exam/final-exam-notes-and-computations.ipynb
+++ b/final-exam/final-exam-notes-and-computations.ipynb
@@ -88,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = -19.672\n",
@@ -105,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "outlets = 1739\n",
@@ -145,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def fscore(r2, k, n):\n",
@@ -173,9 +179,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11. Interaction Term"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using:\n",
+    "\n",
+    "- $y$: faculty salary\n",
+    "- $x_{1}$: total enrollment (enart)\n",
+    "- $x_{2}$: % of students receiving federal aid (pfedaid)\n",
+    "- $x_{3}$: total revenues in millions of dollars (tot_rev_millions)\n",
+    "- $x_{4}$: whether an institution is a Landgrant college or university (landgrant)\n",
+    "\n",
+    "The multiple regression formula is:\n",
+    "\n",
+    "$\\hat{y} = 70507.52921 + 0.43514x_{1} + -138.86349x_{2} + 10.31621x_{3} + 4519.55901x_{4} + -4.41862x{3}x{4}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 70507.52921\n",
+    "b1 = 0.43514\n",
+    "b2 = -138.86349\n",
+    "b3 = 10.31621\n",
+    "b4 = 4519.55901\n",
+    "b34 = -4.41862"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def haty(x1, x2, x3, x4):\n",
+    "    return a + (b1*x1) + (b2*x2) + (b3*x3) + (b4*x4) + (b34*x3*x4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Total Enrollment = 20,000\n",
+    "% Receiving Federal Financial Aid = 25\n",
+    "Total Revenues = $30 Million\n",
+    "Landgrant = 1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x1 = 20000\n",
+    "x2 = 25\n",
+    "x3 = 30\n",
+    "x4 = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80435.22867"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "haty(x1, x2, x3, x4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Total Enrollment = 20,000\n",
+    "% Federal Receiving Financial Aid = 25\n",
+    "Total Revenues = $30 Million\n",
+    "Landgrant = 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x1 = 20000\n",
+    "x2 = 25\n",
+    "x3 = 30\n",
+    "x4 = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "76048.22826"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "haty(x1, x2, x3, x4)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -196,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "toc": {
    "base_numbering": 1,
