Final Exam: problem 11.a answered

--- a/final-exam/final-exam-notes-and-computations.ipynb
+++ b/final-exam/final-exam-notes-and-computations.ipynb
@@ -189,6 +189,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### part A: interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "in multiple regression, categorical variables are substituted... one group in the category is left out\n",
+    "\n",
+    "when there are just one category (i.e., a binary variable, e.g. smokers and non-smokers)\n",
+    "there is just one interaction: the \"yes\" response\n",
+    "\n",
+    "**Interpretation (base term)**:\n",
+    "> the effect of variable when categorical-variable category 1 = 0 (and category 2 = 0, ...) \n",
+    "> controlling for other variables\n",
+    "\n",
+    "or\n",
+    "> the effect of variable for the referrent category, controlling for other variables\n",
+    "\n",
+    "\"for the referrent category, every one-unit increase in variable is assoc with a coefficient unit increase/decrease in the response variable... is/is not statistically significant... with a p-value range confidence interval\"\n",
+    "\n",
+    "**Interpreting the type variables**:\n",
+    "- these are the categorical variables\n",
+    "- the intercept difference for the groups (within the categorical variable)\n",
+    "- when other variables = 0\n",
+    "\n",
+    "\"the difference between group and omitted group when other variables = 0 is: the group has on average coefficient higher/lower level of dependent variable than the omitted group\"\n",
+    "\n",
+    "**Interaction Terms** (4m44s)\n",
+    "- the difference in the slope\n",
+    "- given `varB:varA`\n",
+    "- where `varB` is a categorical variable, and `varA` is a quantitative variable\n",
+    "- the coefficient expresses the difference between the shown group of `varB` and the referrent category\n",
+    "- the total slope is the `varA` coefficient +/- the interaction coefficient\n",
+    "\n",
+    "the interaction is kind of estimating separate models, which allows the slope to be different for each group (only one will apply at any given time, all others will = 0)\n",
+    "\n",
+    "the coefficients are/are not statistically significant: look at the P-value\n",
+    "\n",
+    "\"the effect of income for the different types is statistically significant ... \"\n",
+    "\n",
+    "\"there is no statistically significant difference in the effect of income for the different types (professions)\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### part B: computations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Using:\n",
     "\n",
     "- $y$: faculty salary\n",
